--- a/notebooks/integrations/aws-bedrock/langchain-qa-example.ipynb
+++ b/notebooks/integrations/aws-bedrock/langchain-qa-example.ipynb
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "7byqCX6VyWYW"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,12 @@
         "AWS_SECRET_KEY = getpass(\"AWS Secret key: \")\n",
         "AWS_REGION = input(f\"AWS Region [default: {default_region}]: \") or default_region\n",
         "\n",
-        "bedrock_client = boto3.client(service_name=\"bedrock-runtime\", region_name=AWS_REGION, aws_access_key_id=AWS_ACCESS_KEY, aws_secret_access_key=AWS_SECRET_KEY)\n"
+        "bedrock_client = boto3.client(\n",
+        "    service_name=\"bedrock-runtime\",\n",
+        "    region_name=AWS_REGION,\n",
+        "    aws_access_key_id=AWS_ACCESS_KEY,\n",
+        "    aws_secret_access_key=AWS_SECRET_KEY\n",
+        ")"
       ],
       "metadata": {
         "id": "kG76APtmp6dH"
@@ -111,7 +116,7 @@
         "\n",
         "We will use [ElasticsearchStore](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html) to connect to our elastic cloud deployment. This would help create and index data easily. In the ElasticsearchStore instance, will set embedding to [BedrockEmbeddings](https://api.python.langchain.com/en/latest/embeddings/langchain.embeddings.bedrock.BedrockEmbeddings.html) to embed the texts and elasticsearch index name that will be used in this example. In the instance, we will set `strategy` to [ElasticsearchStore.SparseVectorRetrievalStrategy()](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.SparseRetrievalStrategy.html#langchain.vectorstores.elasticsearch.SparseRetrievalStrategy) as we use this strategy to split documents.\n",
         "\n",
-        "As we're using ELSER we use [SparseVectorRetrievalStrategy](https://python.langchain.com/docs/integrations/vectorstores/elasticsearch#sparsevectorretrievalstrategy-elser) strategy. This strategy uses Elasticsearch's sparse vector retrieval to retrieve the top-k results. There is more other [strategies](https://python.langchain.com/docs/integrations/vectorstores/elasticsearch#approxretrievalstrategy) in langchain that might be used base on your needs."
+        "As we're using [ELSER](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html) we use [SparseVectorRetrievalStrategy](https://python.langchain.com/docs/integrations/vectorstores/elasticsearch#sparsevectorretrievalstrategy-elser) strategy. This strategy uses Elasticsearch's sparse vector retrieval to retrieve the top-k results. There is more other [strategies](https://python.langchain.com/docs/integrations/vectorstores/elasticsearch#approxretrievalstrategy) in langchain that might be used base on your needs."
       ],
       "metadata": {
         "id": "Utg-ZqS_QS1G"
@@ -127,11 +132,14 @@
         "\n",
         "embeddings = BedrockEmbeddings(client=bedrock_client)\n",
         "\n",
-        "vector_store = ElasticsearchStore(es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD,\n",
-        "            index_name= \"workplace_index\",\n",
-        "            embedding=embeddings,\n",
-        "            strategy=ElasticsearchStore.SparseVectorRetrievalStrategy()\n",
-        "        )\n"
+        "vector_store = ElasticsearchStore(\n",
+        "    es_cloud_id=CLOUD_ID,\n",
+        "    es_user=CLOUD_USERNAME,\n",
+        "    es_password=CLOUD_PASSWORD,\n",
+        "    index_name= \"workplace_index\",\n",
+        "    embedding=embeddings,\n",
+        "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy()\n",
+        ")"
       ],
       "metadata": {
         "id": "idJiMEZpQfP7"
@@ -157,7 +165,7 @@
         "\n",
         "response = urlopen(url)\n",
         "\n",
-        "workplace_docs = json.loads(response.read())\n"
+        "workplace_docs = json.loads(response.read())"
       ],
       "metadata": {
         "id": "sjwpw_IxQ72L"
@@ -168,7 +176,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Split Documents into Passages\n",
+        "## Split Documents into Passages\n",
         "\n",
         "We’ll chunk documents into passages in order to improve the retrieval specificity and to ensure that we can provide multiple passages within the context window of the final question answering prompt.\n",
         "\n",
@@ -222,7 +230,11 @@
       "cell_type": "code",
       "source": [
         "documents = vector_store.from_documents(\n",
-        "    docs, es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD, index_name=\"workplace_index\",\n",
+        "    docs,\n",
+        "    es_cloud_id=CLOUD_ID,\n",
+        "    es_user=CLOUD_USERNAME,\n",
+        "    es_password=CLOUD_PASSWORD,\n",
+        "    index_name=\"workplace_index\",\n",
         "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy()\n",
         ")"
       ],
@@ -307,7 +319,7 @@
         "id": "gWGfbz2TkuJt",
         "outputId": "12af9c94-9113-4f34-b9de-f60681951206"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
