minor fixes to search notebooks

--- a/notebooks/search/01-keyword-querying-filtering.ipynb
+++ b/notebooks/search/01-keyword-querying-filtering.ipynb
@@ -61,9 +61,9 @@
     }
    ],
    "source": [
-    "cloud_id = getpass.getpass('Cloud ID: ')\n",
+    "cloud_id = getpass.getpass('Elastic Cloud ID: ')\n",
     "elastic_username = 'elastic'\n",
-    "elastic_password = getpass.getpass('Password: ') \n",
+    "elastic_password = getpass.getpass('Elastic Password: ')\n",
     "client = Elasticsearch(\n",
     "    cloud_id=cloud_id,\n",
     "    basic_auth=(elastic_username, elastic_password)\n",
