Update ingest syntax elser notebook
Update description ELSER

change elser field name, move upgrade to a sep folder

update file path of upgrade notebook in README.md

upgrade folder rename

update colab link

--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -12,7 +12,11 @@
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/03-ELSER.ipynb)\n",
     "\n",
     "\n",
-    "Learn how to use the [ELSER](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html) for text expansion-powered semantic search."
+    "Learn how to use the [ELSER](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html) for text expansion-powered semantic search.\n",
+    "\n",
+    "**`Note:`** This notebook demonstrates how to use ELSER model `.elser_model_2` model which offers an improved retrieval accuracy. \n",
+    "\n",
+    "If you have set up an index with ELSER model `.elser_model_1`, and would like to upgrade to ELSER v2 model - `.elser_model_2`, Please follow instructions from the notebook on [how to upgrade an index to use elser model](../model-upgrades/upgrading-index-to-use-elser.ipynb)"
    ]
   },
   {
@@ -155,22 +159,13 @@
     "Read https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html#connect-self-managed-new to learn how to connect using API keys.\n"
    ]
   },
-
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-         "## Upgrading existing index to `.elser_model_2` ELSER model\n",
-    "\n",
-    "If have already had set up an index with ELSER model `.elser_model_1`, You can easily upgrade to  `.elser_model_2`  model by [Reindexing with ingest pipeline](https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-reindex.html#reindex-with-an-ingest-pipeline) referencing ELSER `.elser_model_2` and starting querying your data with ELSER right away. \n",
-    "\n",
-    "For more information refer to our notebook on [how to upgrade an index to use elser model](./06-upgrading-index-elser.ipynb)\n"
-     
     "# Download and Deploy ELSER Model\n",
-    "From 8.11, Elastic supports  `.elser_model_2` model which offers an improved retrieval accuracy. To use ELSER, you must have the [appropriate subscription]() level\n",
-    "for semantic search or the trial period activated.\n",
-     
-    "In this example, we are going to download and deploy the ELSER model in our ML node. Make sure you have an ML node in order to run the ELSER model. "
+    "\n",
+    "In this example, we are going to download and deploy the ELSER model in our ML node. Make sure you have an ML node in order to run the ELSER model."
    ]
   },
   {
@@ -181,7 +176,7 @@
    "source": [
     "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist.\n",
     "client.ml.put_trained_model(\n",
-    "  model_id=\".elser_model_1\",\n",
+    "  model_id=\".elser_model_2\",\n",
     "  input={\n",
     "    \"field_names\": [\"text_field\"]\n",
     "  }\n",
@@ -197,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +205,7 @@
    ],
    "source": [
     "status = client.ml.get_trained_models(\n",
-    "  model_id=\".elser_model_1\",\n",
+    "  model_id=\".elser_model_2\",\n",
     "  include=\"definition_status\"\n",
     ")\n",
     "\n",
@@ -235,7 +230,7 @@
    "source": [
     "# Start trained model deployment\n",
     "client.ml.start_trained_model_deployment(\n",
-    "  model_id=\".elser_model_1\",\n",
+    "  model_id=\".elser_model_2\",\n",
     "  number_of_allocations=1,\n",
     ")"
    ]
@@ -262,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -277,7 +272,7 @@
        "ObjectApiResponse({'acknowledged': True})"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,15 +285,12 @@
     "    {\n",
     "      \"inference\": {\n",
     "        \"model_id\": \".elser_model_2\",\n",
-    "        \"target_field\": \"ml\",\n",
-    "        \"field_map\": {\n",
-    "          \"plot\": \"text_field\"\n",
-    "        },\n",
-    "        \"inference_config\": {\n",
-    "          \"text_expansion\": {\n",
-    "            \"results_field\": \"tokens\"\n",
-    "          }\n",
-    "        }\n",
+    "        \"input_output\": [\n",
+    "            {\n",
+    "              \"input_field\": \"plot\",\n",
+    "              \"output_field\": \"plot_embedding\"\n",
+    "            }\n",
+    "          ]\n",
     "      }\n",
     "    }\n",
     "  ]\n",
@@ -316,9 +308,9 @@
     "\n",
     "- `inference`: A processor that performs inference using a machine learning model.\n",
     "- `model_id`: Specifies the ID of the machine learning model to be used. In this example, the model ID is set to `.elser_model_2`.\n",
-    "- `target_field`: Defines the field where the inference result will be stored. Here, it is set to `ml`.\n",
-    "- `text_expansion`: Configures text expansion options for the inference process.\n",
-    "In this example, the inference results will be stored in a field named \"tokens\"."
+    "- `input_output`: Specifies input and output fields\n",
+    "- `input_field`: Field name from which the `rank_features` vector representation are created.\n",
+    "- `output_field`:  Field name which contains inference results. "
    ]
   },
   {
@@ -339,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -354,7 +346,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'elser-example-movies'})"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +372,7 @@
     "          }\n",
     "        }\n",
     "      },\n",
-    "      \"ml.tokens\": { \n",
+    "      \"plot_embedding\": { \n",
     "        \"type\": \"rank_features\" \n",
     "      }\n",
     "    }\n",
@@ -403,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -448,8 +440,8 @@
     "id": "oCj3jHHML4Tn"
    },
    "source": [
-    "Inspect a new document to confirm that it now has an `\"ml\": {\"tokens\":...}` field that contains a list of new, additional terms.\n",
-    "These terms are the **text expansion** of the field(s) you targeted for ELSER inference.\n",
+    "Inspect a new document to confirm that it now has an `plot_embedding` field that contains a list of new, additional terms.\n",
+    "These terms are the **text expansion** of the field(s) you targeted for ELSER inference in `input_field` while creating the pipeline. \n",
     "ELSER essentially creates a tree of expanded terms to improve the semantic searchability of your documents.\n",
     "We'll be able to search these documents using a `text_expansion` query.\n",
     "\n",
@@ -470,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -483,17 +475,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 7.934606\n",
+      "Score: 12.7633505\n",
       "Title: Fight Club\n",
       "Plot: An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.\n",
       "\n",
-      "Score: 6.172357\n",
+      "Score: 9.930428\n",
       "Title: Pulp Fiction\n",
       "Plot: The lives of two mob hitmen, a boxer, a gangster and his wife, and a pair of diner bandits intertwine in four tales of violence and redemption.\n",
       "\n",
-      "Score: 4.646809\n",
-      "Title: Se7en\n",
-      "Plot: Two detectives, a rookie and a veteran, hunt a serial killer who uses the seven deadly sins as his motives.\n",
+      "Score: 9.488338\n",
+      "Title: The Matrix\n",
+      "Plot: A computer hacker learns from mysterious rebels about the true nature of his reality and his role in the war against its controllers.\n",
       "\n"
      ]
     }
@@ -504,7 +496,7 @@
     "    size=3,\n",
     "    query={\n",
     "        \"text_expansion\": {\n",
-    "            \"ml.tokens\": {\n",
+    "            \"plot_embedding\": {\n",
     "                \"model_id\":\".elser_model_2\",\n",
     "                \"model_text\":\"fighting movie\"\n",
     "            }\n",
