--- a/notebooks/integrations/amazon-bedrock/langchain-qa-example.ipynb
+++ b/notebooks/integrations/amazon-bedrock/langchain-qa-example.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Integration Amazon Bedrock\n",
+        "# Use Amazon Bedrock\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/langchain/bedrock_integration.ipynb)\n",
         "\n",
         "This workbook demonstrates how to work with Langchain [Amazon Bedrock](https://aws.amazon.com/bedrock/). Amazon Bedrock is a managed service that makes foundation models from leading AI startup and Amazon's own Titan models available through APIs.\n",
