use sparse_vector in ELSER notebooks

--- a/notebooks/model-upgrades/upgrading-index-to-use-elser.ipynb
+++ b/notebooks/model-upgrades/upgrading-index-to-use-elser.ipynb
@@ -35,19 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install elasticsearch -qU"
    ]
@@ -82,17 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'instance-0000000001', 'cluster_name': '1646af1463a8461e8bc3a33f317f8cf1', 'cluster_uuid': 'FF7uKiNRT6SejAcx2qDL-w', 'version': {'number': '8.11.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '454cd35d33aafc161b4f7238d63777e71814d834', 'build_date': '2023-10-16T22:04:47.763088486Z', 'build_snapshot': False, 'lucene_version': '9.8.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Found in the 'Manage Deployment' page\n",
     "CLOUD_ID = getpass.getpass('Enter Elastic Cloud ID:  ')\n",
@@ -246,7 +228,7 @@
    "source": [
     "# Upgrade index `movies` to use ELSER model\n",
     "\n",
-    "we are ready to re-index  `movies` to a new index with the ELSER model `.elser_model_2`. As a first step, we have to create new ingestion pipeline and a index to use ELSER model. \n",
+    "we are ready to re-index  `movies` to a new index with the ELSER model `.elser_model_2`. As a first step, we have to create new ingestion pipeline and index to use ELSER model. \n",
     "\n",
     "# Create a new pipeline with ELSER \n",
     "Let's create a new ingestion pipeline with ELSER model `.elser_model_2`. "
@@ -283,8 +265,7 @@
    "source": [
     "# Create a index with mappings\n",
     "\n",
-    "Next, create an index with [`text_expansion`](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-text-expansion-query.html) query supporting ELSER model and [`rank_features`](https://www.elastic.co/guide/en/elasticsearch/reference/current/rank-features.html) to work with our vectors. \n",
-    "\n"
+    "Next, create an index with required mappings for ELSER.  "
    ]
   },
   {
@@ -307,11 +288,20 @@
     "        }\n",
     "      },\n",
     "      \"plot_embedding\": { \n",
-    "        \"type\": \"rank_features\" \n",
+    "        \"type\": \"sparse_vector\" \n",
     "      }\n",
     "    }\n",
     "  }\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:**\n",
+    "- `plot_embedding` is the name of the field that contains generated token with the type [`sparse_vector`](https://www.elastic.co/guide/en/elasticsearch/reference/master/sparse-vector.html) \n",
+    "- `plot` is the name of the field from which the [`sparse_vector`](https://www.elastic.co/guide/en/elasticsearch/reference/master/sparse-vector.html)  are created. "
    ]
   },
   {
@@ -341,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once reindex is complete, inspect any document in the index `elser-movies` and notice that the document has a additional field `plot_embedding` with terms that we will be using in to search in our `text_expansion` query. \n",
+    "Once reindex is complete, inspect any document in the index `elser-movies` and notice that the document has a additional field `plot_embedding` with terms that we will be using in `text_expansion` query. \n",
     " "
    ]
   },
@@ -356,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +463,7 @@
     "        }\n",
     "      },\n",
     "      \"plot_embedding\": {\n",
-    "        \"type\": \"rank_features\"\n",
+    "        \"type\": \"sparse_vector\"\n",
     "      },\n",
     "    }\n",
     "  }\n",
@@ -493,25 +483,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ObjectApiResponse({'took': 2271, 'timed_out': False, 'total': 12, 'updated': 0, 'created': 12, 'deleted': 0, 'batches': 1, 'version_conflicts': 0, 'noops': 0, 'retries': {'bulk': 0, 'search': 0}, 'throttled_millis': 0, 'requests_per_second': -1.0, 'throttled_until_millis': 0, 'failures': []})"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "client.reindex(source={\n",
-    "    \"index\": \"elser-example-movies\", # replace with your index name\n",
+    "    \"index\": \"my-index\", # replace with your index name\n",
     "    \"_source\": {\n",
-    "      \"excludes\": [\"ml\"]  # replace with the field-name from your index, that has previously generated tokens\n",
+    "      \"excludes\": [\"my-tokens-field\"]  # replace with the field-name from your index, that has previously generated tokens\n",
     "    }}, \n",
     "    dest={\n",
     "    \"index\": \"elser-upgrade-index-demo\",\n",
@@ -530,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +582,7 @@
        "ObjectApiResponse({'blogs': {'aliases': {}, 'mappings': {'properties': {'text_embedding': {'properties': {'is_truncated': {'type': 'boolean'}, 'model_id': {'type': 'text', 'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}}, 'predicted_value': {'type': 'dense_vector', 'dims': 384, 'index': True, 'similarity': 'l2_norm'}}}, 'title': {'type': 'text', 'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}}}}, 'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}}, 'number_of_shards': '1', 'blocks': {'read_only_allow_delete': 'false'}, 'provided_name': 'blogs', 'default_pipeline': 'vectorize_blogs', 'creation_date': '1697651466693', 'number_of_replicas': '1', 'uuid': 'JWkPyTphQ2GV0sLadHWjjw', 'version': {'created': '8500003'}}}}})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +661,7 @@
     "        }\n",
     "      },\n",
     "      \"title_embedding\": {\n",
-    "        \"type\": \"rank_features\"\n",
+    "        \"type\": \"sparse_vector\"\n",
     "      },\n",
     "    }\n",
     "  }\n",
@@ -725,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
