- Added link to synonyms API docs - Standardized on "synonyms sets" terminology - Added more info to intro

--- a/notebooks/search/06-synonymys-api.ipynb
+++ b/notebooks/search/06-synonymys-api.ipynb
@@ -10,7 +10,7 @@
         "\n",
         "<a target=\"_blank\" href=\"https://colab.research.google.com/github/Mikep86/elasticsearch-labs/blob/synonyms-api-notebook/notebooks/search/06-synonymys-api.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "\n",
-        "This interactive notebook will introduce you to the [Synonyms API](https://www.elastic.co/blog/update-synonyms-elasticsearch-introducing-synonyms-api) using the official [Elasticsearch Python client](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html). You'll create & update synonym sets, configure an index to use synonyms, and run queries that leverage synonyms for enhanced relevancy."
+        "This interactive notebook will introduce you to the Synonyms API ([blog post](https://www.elastic.co/blog/update-synonyms-elasticsearch-introducing-synonyms-api), [API documentation](https://www.elastic.co/guide/en/elasticsearch/reference/current/synonyms-apis.html)) using the official [Elasticsearch Python client](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html). Synonyms allow you to enhance search relevancy by defining relationships between terms that have the similar meanings. In this notebook, you'll create & update synonyms sets, configure an index to use synonyms, and run queries that leverage synonyms for enhanced relevancy."
       ]
     },
     {
