- Updated language describing analyzer config - Added link to synonym_graph token filter - Removed link to external content

--- a/notebooks/search/06-synonymys-api.ipynb
+++ b/notebooks/search/06-synonymys-api.ipynb
@@ -276,13 +276,13 @@
       "source": [
         "There are a few things to note in the configuration:\n",
         "\n",
-        "- We are using the `synonym_graph` token filter.\n",
+        "- We are using the [`synonym_graph` token filter](https://www.elastic.co/guide/en/elasticsearch/reference/current/analysis-synonym-graph-tokenfilter.html).\n",
         "- We have defined two analyzers: `my_custom_index_analyzer` and `my_custom_search_analyzer`. `my_custom_search_analyzer` is used as a [search analyzer](https://www.elastic.co/guide/en/elasticsearch/reference/current/search-analyzer.html).\n",
         "- `my_synonym_filter` is used only in `my_custom_search_analyzer`.\n",
         "\n",
-        "A configuration like this is used to allow us to a) use multi-word synonyms and b) update synonyms without reindexing.\n",
+        "The `synonym_graph` token filter allows us to use multi-word synonyms. However, it is important to apply this filter only at search time, hence why we use it only in `my_custom_search_analyzer`. And since synonyms are only applied at search time, we can update them without reindexing.\n",
         "\n",
-        "Multi-word synonym handling is an important topic to understand if you want to leverage synonyms to their maximum benefit. See the [the subtleties of Elasticsearch synonyms](https://mauricius.dev/the-subtleties-of-elasticsearch-synonyms/) for more information."
+        "See [_The same, but different: Boosting the power of Elasticsearch with synonyms_](https://www.elastic.co/blog/boosting-the-power-of-elasticsearch-with-synonyms) for more background information about search-time synonyms."
       ]
     },
     {
