--- a/notebooks/search/06-synonymys-api.ipynb
+++ b/notebooks/search/06-synonymys-api.ipynb
@@ -443,8 +443,7 @@
         "id": "RtXj_JwyZ3DZ"
       },
       "source": [
-        "We don't get any results! Let's try using the Synonyms API to add a new synonym rule for AI.\n",
-        "\n"
+        "We didn't get any results! There are some books that use the terms \"artificial intelligence\", but not \"AI\". Let's try using the Synonyms API to add a new synonym rule for \"AI\" so the previous query returns results."
       ]
     },
     {
