Added conclusion section

--- a/notebooks/search/06-synonymys-api.ipynb
+++ b/notebooks/search/06-synonymys-api.ipynb
@@ -497,6 +497,15 @@
         "\n",
         "pretty_search_response(response)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Conclusion\n",
+        "\n",
+        "The Synonyms API allows you to dynamically create & modify the synonyms used in your search index in real time. After reading this notebook, you should have all you need to start integrating the Synonyms API into your search experience!"
+      ]
     }
   ],
   "metadata": {
