Added synonyms set section

--- a/notebooks/search/06-synonymys-api.ipynb
+++ b/notebooks/search/06-synonymys-api.ipynb
@@ -143,13 +143,38 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Create synonyms set\n",
+        "\n",
+        "Let's create our initial synonyms set first."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "synonyms_set = [\n",
+        "    {\n",
+        "        \"id\": \"synonym-1\",\n",
+        "        \"synonyms\": \"js, javascript, java script\"\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "client.synonyms.put_synonym(id=\"my-synonyms-set\", synonyms_set=synonyms_set)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "-phOM4SOFopW"
       },
       "source": [
         "### Configure the index\n",
         "\n",
-        "First ensure that you do not have a previously created index with the name `book_index`."
+        "Ensure that you do not have a previously created index with the name `book_index`."
       ]
     },
     {
@@ -173,31 +198,7 @@
         "id": "0fNVJ_JCHe04"
       },
       "source": [
-        "🔐 NOTE: at any time you can come back to this section and run the `delete` function above to remove your index and start from scratch.\n",
-        "\n",
-        "Let's create our initial synonyms set next."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BCOr2O5CIyqK",
-        "outputId": "cf5499e1-13f6-4cc1-aca4-7ac6c65f4975"
-      },
-      "outputs": [],
-      "source": [
-        "synonyms_set = [\n",
-        "    {\n",
-        "        \"id\": \"synonym-1\",\n",
-        "        \"synonyms\": \"js, javascript, java script\"\n",
-        "    }\n",
-        "]\n",
-        "\n",
-        "client.synonyms.put_synonym(id=\"my-synonyms-set\", synonyms_set=synonyms_set)"
+        "🔐 NOTE: at any time you can come back to this section and run the `delete` function above to remove your index and start from scratch."
       ]
     },
     {
