Added search result output

--- a/notebooks/search/06-synonymys-api.ipynb
+++ b/notebooks/search/06-synonymys-api.ipynb
@@ -381,7 +381,41 @@
         "id": "KPvOrmTBYDet",
         "outputId": "8d9f3de5-2508-4ca0-91b1-ece5e6099bea"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "ID: 3NfpXIsBGHjk6-WLlqOE\n",
+            "Publication date: 2018-12-04\n",
+            "Title: Eloquent JavaScript\n",
+            "Summary: A modern introduction to programming\n",
+            "Publisher: no starch press\n",
+            "Reviews: 38\n",
+            "Authors: ['marijn haverbeke']\n",
+            "Score: 20.307524\n",
+            "\n",
+            "ID: 29fpXIsBGHjk6-WLlqOE\n",
+            "Publication date: 2015-03-27\n",
+            "Title: You Don't Know JS: Up & Going\n",
+            "Summary: Introduction to JavaScript and programming as a whole\n",
+            "Publisher: oreilly\n",
+            "Reviews: 36\n",
+            "Authors: ['kyle simpson']\n",
+            "Score: 19.787104\n",
+            "\n",
+            "ID: 39fpXIsBGHjk6-WLlqOE\n",
+            "Publication date: 2008-05-15\n",
+            "Title: JavaScript: The Good Parts\n",
+            "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
+            "Publisher: oreilly\n",
+            "Reviews: 51\n",
+            "Authors: ['douglas crockford']\n",
+            "Score: 17.064087\n"
+          ]
+        }
+      ],
       "source": [
         "response = client.search(\n",
         "    index=\"book_index\",\n",
@@ -420,7 +454,15 @@
         "id": "oj1ynL5nZz0u",
         "outputId": "f1968d2c-83a5-4b3c-f397-44b16e7ab46e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Your search returned no results.\n"
+          ]
+        }
+      ],
       "source": [
         "response = client.search(\n",
         "    index=\"book_index\",\n",
@@ -481,7 +523,23 @@
         "id": "KDx_V__QhIiy",
         "outputId": "6d23e7f1-e129-4ee7-edf7-8e55ba1d0355"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "ID: 2dfpXIsBGHjk6-WLlqOE\n",
+            "Publication date: 2020-04-06\n",
+            "Title: Artificial Intelligence: A Modern Approach\n",
+            "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
+            "Publisher: pearson\n",
+            "Reviews: 39\n",
+            "Authors: ['stuart russell', 'peter norvig']\n",
+            "Score: 42.500813\n"
+          ]
+        }
+      ],
       "source": [
         "response = client.search(\n",
         "    index=\"book_index\",\n",
